edit specification and fix issues
